Update required Fabric Loader / Fireplace Lib versions