@@ -7,7 +7,7 @@ loader_version=0.12.6
 maven_group=dev.the-fireplace
 archives_base_name=Textbook
 github_slug=Textbook
-mod_version=2.1.1
+mod_version=2.2.0
 release_type=release
 # Dependencies
 fireplacelib_version=6.2.2+1.17.1
